--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="ime_name">Animalese Typing</string>
     <string name="ime_settings_name">Animalese Typing Settings</string>
+    <string name="settings">Settings</string>
+    <string name="keyboard_size">Adjust Keyboard</string>">
 </resources>
